<resources>
    <string name="app_name">BlackJackProject</string>
    <string name="start_game">Start Game</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="home">HOME</string>
    <string name="euros">EUROS</string>
    <string name="dollars">USD</string>
    <string name="currency_info">Please choose your desired currency!</string>
    <string name="rules_label">Rules for Blackjack:</string>
    <string name="rules_info">The game begins with the dealer dealing two cards to the player.
                              One card will be face down and one card will be face up. The player can choose to hit or stand based on the results.
                              If the player reaches a total score of 21, he gets Blackjack and wins automatically. If the player goes above 21, he busts
                              and loses. All face cards are worth 10 while each numbered card is worth its value on the card. If the player reaches 4 cards
                              without busting, he wins the pot!</string>
    <string name="names">Created by: Thomas Gray and Alden Poole</string>
    <string name="course">IS 3920</string>
    <string name="last_updated">Last updated: 11/28/18 </string>
    <string name="majors">Thomas - Information Security (Minor in Information Systems)
                         \nAlden - Applied Computer Science (Minor in Information Systems)</string>
</resources>