<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:background="@drawable/settings_screen"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/currency_info"
        android:textColor="@color/white"
        android:textStyle="italic|bold" />

    <Button
        android:id="@+id/dollars_button_settings"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/dollars"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/euros_button_settings"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button3"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/euros"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/home_button_settings"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button2"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/home"
        android:textColor="@color/black"
        android:textSize="30sp" />
</LinearLayout>