<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/start_game_button"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/start_game"
            android:textColor="@color/black"
            android:textSize="30sp" />


        <Button
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button2"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="30sp" />


        <Button
            android:id="@+id/about_button"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button3"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/about_us"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>


</LinearLayout>